# airflow

./: .gitignore  Dockerfile.mcp  Dockerfile.mcp.deps  README.md  TODO  compose.yaml  docker-compose.yml  models_test.py  pyproject.toml  pyrightconfig.json
.cursor/rules/: agent-behavior.mdc  windows-powershell.mdc
apps/gateway/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/gateway/src/gateway/: __init__.py  main.py  settings.py
apps/gateway/src/gateway/api/: routes.py  routes_rag.py
apps/gateway/src/gateway/llm/: client.py
apps/gateway/src/gateway/mcp/: __init__.py
apps/gateway/src/gateway/mcp/client/: mcp_client.py
apps/gateway/src/gateway/prompts/: registry.py  render.py
apps/gateway/src/gateway/prompts/system_prompts/: __init__.py
apps/gateway/src/gateway/services/: llm_json.py  rag_agent.py  runner.py
apps/gateway/web-ui/: app.js  index.html  styles.css
apps/mcp_server/: Dockerfile  pyproject.toml  requirements.txt
apps/mcp_server/src/mcp_server/: __init__.py  app.py  audit.py  main.py  policy.py  settings.py  tools.py
apps/mcp_server/src/mcp_server/rag/: __init__.py  embedding.py  formats.py  retrieve.py
apps/mcp_server/src/mcp_server/rag/ingest/: __init__.py  chunker.py  indexer.py  loader.py
apps/mcp_server/src/mcp_server/rag/store/: __init__.py  models.py  qdrant_store.py
data/: knowledge_base.json  startup.sql
p1-prompt-contracts/: .env  .gitignore  DESCRIPTION.md  README.md  pyproject.toml
p1-prompt-contracts/src/app/: main.py  settings.py
p1-prompt-contracts/src/app/api/: routes.py
p1-prompt-contracts/src/app/llm/: client.py  token_meter.py
p1-prompt-contracts/src/app/prompts/: registry.py  render.py
p1-prompt-contracts/src/app/prompts/templates/: classify_v1.txt  extract_v1.txt
p1-prompt-contracts/src/app/services/: runner.py
p1-prompt-contracts/src/p1_prompt_contracts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
p1-prompt-contracts/tests/: conftest.py  test_acceptance.py  test_tokenizer.py
scripts/: dev-up.ps1  lint.ps1  test.ps1
shared/db/: pyproject.toml
shared/db/src/db/: connection.py
shared/db/tests/: __init__.py
(+110 files in other folders)
