[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "tiktoken>=0.12.0",
    "mcp>=1.26.0",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
