[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=5.2.0",
    "qdrant-client>=1.16.0",
    "psycopg[binary,pool]>=3.3.0",
    "mcp>=1.26.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
