[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary,pool]>=3.3.0",
]
# common устанавливается рядом (pip install -e shared/common -e shared/db)

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
